k8s/manifests/my/gateway.k8s.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-oswee-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - my.oswee.com
      tls:
        mode: SIMPLE
        credentialName: my-oswee-cert
...
