k8s/manifests/my/destination-rule.k8s.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-oswee-dr
  namespace: istio-system
spec:
  host: my.oswee.com
  trafficPolicy:
    tls:
      mode: DISABLE
...
