k8s/manifests/my/service-entry.k8s.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-myoswee
  namespace: default
spec:
  hosts:
    - my.oswee.com
  addresses:
    - 192.168.100.1/32
  ports:
    - number: 8081
      name: myoswee
      protocol: HTTP
  location: MESH_INTERNAL
  resolution: STATIC
  endpoints:
    - address: 2.2.2.2
    - address: 3.3.3.3
...
