k8s/manifests/my/virtual-service.k8s.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-oswee-vs
  namespace: default
spec:
  hosts:
    - my.oswee.com
  http:
    - route:
        - destination:
            host: my.oswee.com
          weight: 100
          headers:
            request:
              remove:
                - x-forwarded-for
      timeout: 3s
...
